RESOLVED FIXED240748
InteractionRegion for wrapped text has multiple rects instead of one
https://bugs.webkit.org/show_bug.cgi?id=240748
Summary InteractionRegion for wrapped text has multiple rects instead of one
Tim Horton
Reported 2022-05-20 17:12:30 PDT
InteractionRegion for wrapped text has multiple rects instead of one
Attachments
Tim Horton
Comment 1 2022-05-20 17:35:20 PDT
EWS
Comment 2 2022-05-21 12:27:09 PDT
Committed r294614 (250840@main): <https://commits.webkit.org/250840@main> Reviewed commits have been landed. Closing PR #871 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-05-21 12:28:14 PDT
Note You need to log in before you can comment on or make changes to this bug.