Source/WebCore/page/InteractionRegion.h
@@ -26,10 +26,15 @@
 #pragma once
 
 #include "FloatRect.h"
+#include "Region.h"
 
 namespace IPC {
 class Decoder;
 class Encoder;
+}
+
+namespace WTF {
+class TextStream;
 }
 
 namespace WebCore {
@@ -37,29 +42,31 @@ namespace WebCore {
 class Page;
 
 struct InteractionRegion {
-    Vector<FloatRect> rectsInContentCoordinates;
+    Region regionInLayerCoordinates;
     bool hasLightBackground { false };
     float borderRadius { 0 };
-    
+
     WEBCORE_EXPORT ~InteractionRegion();
-    
+
     template<class Encoder> void encode(Encoder&) const;
     template<class Decoder> static std::optional<InteractionRegion> decode(Decoder&);
 };
 
 inline bool operator==(const InteractionRegion& a, const InteractionRegion& b)
 {
-    return a.rectsInContentCoordinates == b.rectsInContentCoordinates
+    return a.regionInLayerCoordinates == b.regionInLayerCoordinates
         && a.hasLightBackground == b.hasLightBackground
         && a.borderRadius == b.borderRadius;
 }
 
 WEBCORE_EXPORT Vector<InteractionRegion> interactionRegions(Page&, FloatRect rectInContentCoordinates);
 
+WTF::TextStream& operator<<(WTF::TextStream&, const InteractionRegion&);
+
 template<class Encoder>
 void InteractionRegion::encode(Encoder& encoder) const
 {
-    encoder << rectsInContentCoordinates;
+    encoder << regionInLayerCoordinates;
     encoder << hasLightBackground;
     encoder << borderRadius;
 }
@@ -67,9 +74,9 @@ void InteractionRegion::encode(Encoder& encoder) const
 template<class Decoder>
 std::optional<InteractionRegion> InteractionRegion::decode(Decoder& decoder)
 {
-    std::optional<Vector<FloatRect>> rectsInContentCoordinates;
-    decoder >> rectsInContentCoordinates;
-    if (!rectsInContentCoordinates)
+    std::optional<Region> regionInLayerCoordinates;
+    decoder >> regionInLayerCoordinates;
+    if (!regionInLayerCoordinates)
         return std::nullopt;
     
     std::optional<bool> hasLightBackground;
@@ -83,7 +90,7 @@ std::optional<InteractionRegion> InteractionRegion::decode(Decoder& decoder)
         return std::nullopt;
 
     return { {
-        WTFMove(*rectsInContentCoordinates),
+        WTFMove(*regionInLayerCoordinates),
         WTFMove(*hasLightBackground),
         WTFMove(*borderRadius)
     } };
